# stream-app

./: .gitignore  docker-compose.yaml  package-lock.json  servers.json
go-transcoder/: Dockerfile  docker-compose.yaml  go.mod  init.sql  init_database.sql
go-transcoder/cmd/mediaconverter/: main.go
go-transcoder/cmd/splitchunks/: main.go
go-transcoder/internal/converter/: indepotency.go  indepotency_test.go  task.go  task_test.go  utils_test.go
go-transcoder/internal/database/: connection.go
go-transcoder/internal/rabbitmq/: rabbitmq.go
go-transcoder/internal/utils/: utils.go
go-transcoder/pkg/log/: log.go  log_test.go
go-transcoder/pkg/rabbitmq/: rabbitmq.go  rabbitmq_test.go
media/uploads/1/: 0.chunk  1.chunk  10.chunk  11.chunk  12.chunk  13.chunk  14.chunk  15.chunk  16.chunk  17.chunk  18.chunk  19.chunk  2.chunk  20.chunk  21.chunk  22.chunk  23.chunk  24.chunk  25.chunk  26.chunk  27.chunk  (+17 more)
next-front/: Dockerfile  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
next-front/src/: model.ts
nginx/: nginx.conf
py-django/: .gitignore  Dockerfile  docker-compose.yaml  init_database.sql  pyproject.toml  requirements.txt  supervisord.conf
py-django/core/: admin.py  api.py  apps.py  form.py  models.py  rabbitmq.py  serializer.py  service.py  urls.py
py-django/core/management/commands/: chunks_consumer.py  consumer_chunks.py  consumer_register.py  init_admin.py
py-django/core/migrations/: 0001_initial.py
py-django/core/templates/admin/core/: upload_video.html
py-django/videos/: settings.py  urls.py
(+18 files in other folders)
